# oppilot

./: .gitignore  README.md  app.py  instructions.txt  run_launcher.py  start_op_dev.ps1  start_op_dev_wt.ps1
op-jetson-adapters/: requirements.txt
op-jetson-adapters/adapters/: gpsd_bridge.py  mock_camera_publisher.py  sensor_manager.py
op-jetson-adapters/adapters/common/: __init__.py  pubsub.py
op-jetson-adapters/config/: mock_nmea.txt  sensors.yaml
op-jetson-adapters/tools/: run_all.sh  sniffer.py
stra/: CMakeLists.txt  main.c
